--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "type": "module",
   "repository": {
@@ -18,6 +20,18 @@
   },
   "homepage": "https://github.com/Shisyr/pet-tasks#readme",
   "dependencies": {
-    "process": "^0.11.10"
+    "classnames": "^2.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.2.0",
+    "sass": "^1.49.7",
+    "scss": "^0.2.4",
+    "typescript": "^4.5.5",
+    "vite": "^2.8.1"
   }
 }
